fix long words/URLs overflowing & breaking layout in moments

--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -599,6 +599,8 @@ a.user-link {
 .moment-text {
   font-size: x-large;
   font-weight: 600;
+  display: block;
+  overflow: hidden;
 }
 .moment-author {
   font-weight: 400;
